--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -51,7 +51,7 @@ $menu = wofi --show drun
 
 # exec-once = $terminal
 # exec-once = nm-applet &
-exec-once = waybar & hyprpaper 
+exec-once = waybar & hyprpaper
 
 
 #############################
@@ -258,8 +258,8 @@ bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, a, movetoworkspace, e-1
-bind = $mainMod SHIFT, d, movetoworkspace, e+1
+bind = $mainMod SHIFT, q, movetoworkspace, e-1
+bind = $mainMod SHIFT, e, movetoworkspace, e+1
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
 bind = $mainMod SHIFT, 2, movetoworkspace, 2
 bind = $mainMod SHIFT, 3, movetoworkspace, 3
