files manager, notification, screen capture

--- a/config/hypr/hyprpaper.conf
+++ b/config/hypr/hyprpaper.conf
@@ -1,8 +1,8 @@
 
-preload = ~/.wallpapers/wall.jpg
+preload = ~/.wallpapers/outer-wilds.jpg
 
-wallpaper = eDP-1,~/.wallpapers/wall.jpg
-wallpaper = eDP-2,~/.wallpapers/wall.jpg
+wallpaper = eDP-1,~/.wallpapers/outer-wilds.jpg
+wallpaper = eDP-2,~/.wallpapers/outer-wilds.jpg
 
 # disable messages on bottom
 splash = true
