--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -38,7 +38,7 @@ monitor=,preferred,auto,auto
 
 # Set programs that you use
 $terminal = kitty
-$fileManager = dolphin
+$fileManager = pcmanfm
 $menu = wofi --show drun
 
 
@@ -49,10 +49,8 @@ $menu = wofi --show drun
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-# exec-once = $terminal
-# exec-once = nm-applet &
 exec-once = waybar & hyprpaper
-
+exec-once = mako
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -127,15 +125,14 @@ decoration {
     blur {
         enabled = true
         size = 2
-        passes = 1
-
+        passes = 6
         vibrancy = 0.1696
     }
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#animations
 animations {
-    enabled = yes, please :)
+    enabled = yes
 
     # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
@@ -186,7 +183,7 @@ master {
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
 misc {
-    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
+    force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
     disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
 }
 
@@ -232,10 +229,13 @@ device {
 # See https://wiki.hyprland.org/Configuring/Keywords/
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
+bind = ,Print, exec, slurp | grim -g - /tmp/shot.png && swappy -f /tmp/shot.png
+
+
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, t, exec, $terminal
 bind = $mainMod, C, killactive,
-bind = $mainMod, F, exec, $fileManager
+bind = $mainMod, F, exec, env GTK_THEME=Arc-Dark $fileManager
 bind = $mainMod, SPACE, exec, $menu
 bind = $mainMod, M, exit,
 bind = $mainMod, P, pseudo, # dwindle
